log
Sun Mar 22 08:42:58 PM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
6ae8339
Sun Mar 22 08:44:46 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘!=’ token
   61 |    for(int * i = first(L), i != NULL; i = next(L)){
      |                              ^~
exercises.c:61:39: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   61 |    for(int * i = first(L), i != NULL; i = next(L)){
      |                                       ^
exercises.c:61:50: error: expected ‘;’ before ‘)’ token
   61 |    for(int * i = first(L), i != NULL; i = next(L)){
      |                                                  ^
      |                                                  ;
cc1: all warnings being treated as errors
2c483ec
Sun Mar 22 08:45:03 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e98b513
Sun Mar 22 08:45:45 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
6b1e5b0
Sun Mar 22 08:47:52 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
94fbec0
Sun Mar 22 08:48:16 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4e88368
Sun Mar 22 08:51:59 PM UTC 2026: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:97:25: error: expected ‘;’ before ‘}’ token
   97 |       push(aux, pop(P1))
      |                         ^
      |                         ;
   98 |    }
      |    ~                     
077a496
